<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_back"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:background="@drawable/btn_com_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:src="@drawable/login_icon_back" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/login_logo_weight"
                    android:layout_height="@dimen/login_logo_height"
                    android:src="@drawable/login_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_logo_desc"
                    android:textColor="@color/txt_black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_username_margin_left"
                android:layout_marginRight="@dimen/login_username_margin_right"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_error_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/login_attention_icon" />

                    <TextView
                        android:id="@+id/tv_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/error_pwd_please_input_again"
                        android:textColor="@color/red"
                        android:textSize="14sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/login_username_edittext_padding"
                    android:paddingTop="@dimen/login_username_edittext_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="用户名"
                        android:textColor="@color/txt_black"
                        android:textSize="14sp" />

                    <AutoCompleteTextView
                        android:id="@+id/autocompletetv_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:textColor="@color/txt_black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/login_username_textsize" />

                    <ImageView
                        android:id="@+id/iv_clear_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/login_clear_icon_margin"
                        android:layout_marginRight="@dimen/login_clear_icon_margin"
                        android:src="@drawable/ic_login_cleartext"
                        android:visibility="gone" />
                </RelativeLayout>

                <View
                    android:id="@+id/view_username"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/txt_gray_divider"></View>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/login_username_edittext_padding"
                    android:paddingTop="@dimen/login_username_edittext_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="46dp"
                        android:text="密码"
                        android:textColor="@color/txt_black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:textColor="@color/txt_black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/login_username_textsize" />

                    <ImageView
                        android:id="@+id/iv_clear_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/login_clear_icon_margin"
                        android:layout_marginRight="@dimen/login_clear_icon_margin"
                        android:src="@drawable/ic_login_cleartext"
                        android:visibility="gone" />
                </RelativeLayout>
                <View
                    android:id="@+id/view_password"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/txt_gray_divider"></View>
            </LinearLayout>

            <Button
                android:id="@+id/bt_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_username_margin_left"
                android:layout_marginRight="@dimen/login_username_margin_right"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:background="@drawable/shape_button_login"
                android:text="@string/action_sign_in"
                android:textColor="@color/login_button_textcolor"
                android:textSize="@dimen/login_button_textsize" />

            <include layout="@layout/service_phone_number"></include>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_content_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_proto_margin_bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ourself_company"
            android:textColor="@color/txt_gray_shallow"
            android:textSize="@dimen/login_proto_textsize" />

    </LinearLayout>

    <include layout="@layout/layout_loading" />

</RelativeLayout>
